[gd_scene load_steps=8 format=2]

[ext_resource path="res://creatures/enemies/test/test-idle.png" type="Texture" id=1]
[ext_resource path="res://creatures/CreatureSprite.gd" type="Script" id=2]
[ext_resource path="res://creatures/enemies/EnemyHitbox.gd" type="Script" id=3]
[ext_resource path="res://creatures/enemies/test/TestEnemy.gd" type="Script" id=4]
[ext_resource path="res://creatures/creature_shader_material.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 10 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0

[node name="TestEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 4 )

[node name="CreatureSprite" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 0, -9 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="EnemyHitbox" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="collided_with_body" from="." to="." method="_on_TestEnemy_collided_with_body"]
[connection signal="collided_with_wall" from="." to="." method="_on_TestEnemy_collided_with_wall"]
[connection signal="killed" from="." to="." method="_on_TestEnemy_killed"]
[connection signal="stunned" from="." to="." method="_on_TestEnemy_stunned"]
[connection signal="unstunned" from="." to="." method="_on_TestEnemy_unstunned"]
[connection signal="finished_death_animation" from="CreatureSprite" to="." method="_on_CreatureSprite_finished_death_animation"]
[connection signal="hitbox_entered" from="EnemyHitbox" to="." method="_on_EnemyHitbox_hitbox_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
